Add Hots api, cors and tweak coupon example
