# server/swagger.js
@@ -16,6 +16,8 @@ const doc = {
           couponId: 123,
           couponType: '折扣',
           couponTitle: '20% Off',
+          couponDiscount: 0.8,
+          couponStartDate: '2022-12-31',
           couponExpiredDate: '2023-12-31',
           couponAmount: 20,
         },
@@ -26,9 +28,11 @@ const doc = {
         {
           couponId: 123,
           couponType: '折扣',
-          couponTitle: 'sale',
+          couponTitle: '20% Off',
+          couponDiscount: 0.8,
+          couponStartDate: '2022-12-31',
           couponExpiredDate: '2023-12-31',
-          isUsed: false,
+          couponAmount: 20,
         },
       ],
     },
